# cmangos-tbc

./: .gitattributes  .gitignore  CMakeLists.txt
docker/: .gitignore  CHANGELOG.md  Dockerfile  README.md  db-import.sh  docker-compose.yml  entrypoint.sh  extractor.sh
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/BattleGround/: BattleGround.cpp  BattleGroundAV.cpp  BattleGroundHandler.cpp  BattleGroundWS.cpp
src/game/Chat/: Chat.cpp
src/game/Entities/: Creature.cpp  GameObject.cpp  ItemHandler.cpp  NPCHandler.cpp  Player.cpp  Player.h  QueryHandler.cpp  Unit.cpp
src/game/Groups/: Group.cpp
src/game/Loot/: LootHandler.cpp  LootMgr.cpp
src/game/Mails/: MailHandler.cpp
src/game/Reputation/: ReputationMgr.cpp
src/game/Server/: DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/game/Spells/: Spell.cpp  SpellHandler.cpp
src/game/World/: World.cpp
src/modules/dualspec/: CMakeLists.txt  README.md
src/modules/dualspec/src/: DualspecModule.cpp  DualspecModule.h  DualspecModuleConfig.cpp  DualspecModuleConfig.h
src/modules/dualspectbc/: CMakeLists.txt
src/modules/dualspectbc/sql/install/characters/: 001_dualspec_schema.sql  002_dualspec_backfill.sql
src/modules/dualspectbc/sql/uninstall/characters/: 001_dualspec_rollback.sql
src/modules/dualspectbc/src/: DualspectbcModule.cpp  DualspectbcModule.h  DualspectbcModuleConfig.cpp  DualspectbcModuleConfig.h  dualspectbc.conf.dist.in
src/modules/vanillarestore/: CMakeLists.txt  README.md
src/modules/vanillarestore/sql/install/world/: 001_revert_2.3.0_creature_rank_and_hp_world.sql
src/modules/vanillarestore/sql/uninstall/world/: 001_revert_2.3.0_creature_rank_and_hp.sql  001_revert_2.3.0_creature_rank_and_hp_world.sql
src/modules/vanillarestore/src/: VanillarestoreModule.cpp  VanillarestoreModule.h  VanillarestoreModuleConfig.cpp  VanillarestoreModuleConfig.h  vanillarestore.conf.dist.in
src/modules/vanillarestore/src/features/: Map530Gate.cpp  Map530Gate.h
